Thu Jul 16 20:58:18 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole.rb (test_s_codepage_changed,
	  test_s_locale_set, test_s_locale_change): skip test if Japanese
	  locale is not installed. [ruby-core:23806]
	
	* test/win32ole/test_win32ole_variant.rb (test_conversion_str2cy):
	  dito.

Thu Jul 16 19:02:28 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb (Socket.tcp_server_sockets_port0): servers
	  is nil if an error occurs before setting it.

Thu Jul 16 18:42:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_seed): suppress a warning.

Thu Jul 16 18:30:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_aset, recursive_hash): rejects recursive hash.
	  [ruby-core:22921]

Thu Jul 16 18:28:09 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* id.c (Init_id), vm.c (vm_exec): @#__ThrowState__ is no longer
	  used.  [ruby-dev:38760]

Thu Jul 16 17:41:28 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_method.c (rb_alias): fix a case which try non-existing method alias.

	* test/ruby/test_alias.rb: add a test.

Thu Jul 16 16:00:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): discards read buffer.  [ruby-core:24240]

Thu Jul 16 15:52:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_new, rb_bigzero_p), range.c (rb_range_values):
	  added for random.c.

	* random.c (rb_random_t): objectified.  [EXPERIMENTAL]
	  [ruby-dev:30954]

Thu Jul 16 14:08:44 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_sample): RDoc update.  a patch from Florian
	  Frank.   [ruby-core:24347]

Thu Jul 16 12:42:10 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_readline): rl_free_line_state
	  before rl_cleanup_after_signal.

	* ext/readline/readline.c (Init_readline): set rl_catch_signals and
	  rl_catch_signwinch as 0. [ruby-core:21884]

Thu Jul 16 08:59:22 2009  Koichi Sasada  <ko1@atdot.net>
